disabled buggy focus measurement on taken images for the moment